--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="/images/rumal1.png" alt="Rumal's picture" width="200" height="200">
+  <img src="images/rumal1.png" alt="Rumal's picture" width="200" height="200">
   <h1>Rumal Rithpura</h1>
   <p><em> <strong>Red Hat</strong> System Administration</em></p>
   <p>Work At <a href="https://ravantech.lk/">Ravantech</p> </a>
