--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </table>
   <hr>
   <a href="C:\Users\user\Documents\new web\HTML-pesonal file\hobbies.html">My Hobbies</a><br><br>
-  <a href="C:\Users\user\Documents\new web\HTML-pesonal file\contact-me.html">Contact Me</a>
+  <a href="https://github.com/Rumal90/cv/blob/main/contact-me.html">Contact Me</a>
 
 
 </body>
