--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="https://github.com/Rumal90/cv/blob/main/images/rumal1.png" alt="Rumal's picture" width="200" height="200">
+  <img src="images/rumal1.png" alt="Rumal's picture" width="200" height="200">
   <h1>Rumal Rithpura</h1>
   <p><em> <strong>Red Hat</strong> System Administration</em></p>
   <p>Work At <a href="https://ravantech.lk/">Ravantech</p> </a>
@@ -50,8 +50,8 @@
     </tr>
   </table>
   <hr>
-  <a href="C:\Users\user\Documents\new web\HTML-pesonal file\hobbies.html">My Hobbies</a><br><br>
-  <a href="https://github.com/Rumal90/cv/blob/main/contact-me.html">Contact Me</a>
+  <a href="hobbies.html">My Hobbies</a><br><br>
+  <a href="contact-me.html">Contact Me</a>
 
 
 </body>
